--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f295b7">  <td>19/09/24 16:57:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParameterEntry.test1(java.lang.String, java.lang.String)[pri:0, instance:org.test1.ParameterEntry@c8e4bb0]">test1</td> 
-  <td>main@1790421142</td>   <td></td> </tr>
+<tr bgcolor="f295b7">  <td>19/09/24 18:38:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AirLineSliver.launch()[pri:0, instance:org.test1.AirLineSliver@15bb6bea]">&gt;&gt;launch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1331923253</td>   <td></td> </tr>
+<tr bgcolor="f295b7">  <td>19/09/24 18:38:55</td>   <td>9559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AirLineSliver.test()[pri:0, instance:org.test1.AirLineSliver@15bb6bea]">test</td> 
+  <td>main@1331923253</td>   <td></td> </tr>
 </table>
